--- a/codeforces/contests/1994/1994.md
+++ b/codeforces/contests/1994/1994.md
@@ -1,5 +1,27 @@
 # Codeforces Round 959 (#1994)
 
+## A. Diverse Game
+If $NM=1$, then it's impossible. Otherwise, we can add $1$ to each element and take it mod $NM$ to ensure that all elements are still $\in[1,NM]$. Time complexity is $O(NM)$ too.
+
+## B. Fun Game
+We satisfy bits in increasing order. If $s_i=t_i$, then ignore it. If $s_i\ne{t_i}$, then there must exist a one bit $j$ before $i$, i.e. $j\le{i}$. $j=i$ is a special case that I'll cover later, so only consider $j<i$. If such a bit $j$ exists, then we can take advantage of the fact that xor is involutory; if we never change the state of the first bit (that is, $l=1$ and $s_1=1$), then we can always perform a sequence of operations to invert bit $i$, and then invert bits $[1,i-1]$ back to their original states.
+
+$j=i$ is also possible to change the state of bit $i$, but the only operation doing that will change the state of bit $1$ as well. In other words, all bits $[1,i]$ in $s$ will become $0$ after this operation for good. Which means, that if any bits satisfy $t_j=1$, $j\in[1,i]$, then it's impossible. Otherwise, we continue onwards to the next bit $i+1$.
+
+The check takes $O(N)$ time.
+
+## C. Hungry Games
+Fix the left pointer $l$, and find the maximum right pointer $r_i$ such that $\sum_{i=l}^{r_i} a_i\le{x}$.
+
+$dp[l]$ is the amount of ranges with left pointer $l$. Any $r\in[l,r_i]$ works, so add that to $dp[l]$. We reset the toxicity counter to zero at position $r_i+1$, so add $dp[r_i+2]$ to $dp[l]$ as well. $O(N)$ complexity.
+
+## D. Funny Game
+Ok, this one was hard for me.
+
+Iterate over operations $x$ in decreasing order. If $|a_u-a_v|\equiv{0}\pmod{x}$, then $a_u\equiv{a_v}\pmod{x}$. Each operation can be viewed as joining two components into one; we start with $N$ components and end with $1$. So because there are $x+1$ components at operation $x$, then by the pigeonhole principle we can always find two indices $u$ and $v$ in separate components such that $a_u\equiv{a_v}\pmod{x}$, and join them together.
+
+The time complexity in my solution is $O(N^2)$.
+
 ## E. Wooden Game
 Ok finally touching this contest again god forbid (Stardew Valley is still the most rigorous experience to date).
 
@@ -7,7 +29,7 @@ By repeatedly removing leaves from a tree, we can get the tree size to any numbe
 
 Assume the number we've taken is $x$. We really don't care about any of the deleted nodes; even if some deletion process could have contributed the bits forming a number $y$, $x|y\le{a_i}$ anyways, so we could have just picked $x|y$ instead of $x$ in the first place. $x|y\le{a_i}$ is true because whatever deletion process you do, you can't achieve a bitwise or greater than $n_i$.
 
-Second, we want to prioritize adding higher bits because $2^k$ is greater than the sum of all $2^i$ satisfying $0\le{i}<k$. This means adding the $kth$ bit is better than adding all bits $0,1,\cdots,k-1$. So an optimal algorithm is to loop through all bits in decreasing order and subtract it from the largest remaining number (if possible). Do this with a priority queue.
+Second, we want to prioritize adding higher bits because $2^k$ is greater than the sum of all $2^i$ satisfying $0\le{i}<k$. This means adding the $kth$ bit is better than adding all bits $0,1,\cdots,k-1$. So an optimal algorithm is to loop through all bits $k$ in decreasing order and check the largest remaining tree size. If it's $\ge{2^k}$, then we allocate the $k$ th bit towards the answer and thus subtract $2^k$ from the size of that tree. Get the largest size with a priority queue.
 
 Time complexity is $O(NlogN)$; $N=\sum{n_i}$.
 
