--- a/codeforces/contests/2001_to_2500/2062/2062.md
+++ b/codeforces/contests/2001_to_2500/2062/2062.md
@@ -1,5 +1,16 @@
 # Codeforces Round 1001 (#2062)
 
+## D. Balanced Tree
+This is very hard. I don't think it's 2200 at all.
+
+Assume $a_i$ are fixed. Then for every pair of adjacent nodes $i$ and $j$ (where $j$ is a child of $i$), in order to achieve $a_i=a_j$ we must be able to change only one of the nodes in a single operation, which corresponds to selecting $u=i$ and $v=j$ or vice versa.
+
+This lends itself to a simple greedy strategy, which is arbitrarily root the tree (e.g. at $1$) and dfs to make all values equal. At the end, return $a_0$. For $i$ and $j$ as earlier defined, if $a_i<a_j$, then we apply $a_j-a_i$ operations with $v=i$ and $u=j$, which increases the root by $a_j-a_i$. It doesn't increase the root when $a_i\ge{a_j}$, so we can disregard that case. So the answer is the sum of all $\max(0,a_j-a_i)+a_0$.
+
+To construct $a$, it's clear that we should set $a_i=l_i$ for leaves of the tree. For other nodes $i$, we set $a_i$ to the maximum of all $a_j$ for children $j$, as to ensure $a_i\ge{a_j}$. It's never optimal to make $a_i$ lower than this, as this increases the sum of $a_j-a_i$ by at least one while decreasing $a_i-a_{par(i)}$ by at most one.
+
+So the final construction is: $a_i=\min(r_i,\max(l_i,a_j))$. This runs in $O(N)$.
+
 ## E1. The Game (Easy Version)
 Cirno must pick such a node $i$ on her first turn such that Daiyousei can still make a move after. Out of the set $S$ of all such $i$, it's optimal to select the $i$ with the maximum $w_i$, which forces Daiyousei to select a node that is not in $S$. Therefore, Cirno wins on the next turn.
 
