--- a/codeforces/contests/2001_to_2500/2064/2064.md
+++ b/codeforces/contests/2001_to_2500/2064/2064.md
@@ -1,5 +1,23 @@
 # Codeforces Round 1005 (#2069)
 
+## D. Eating
+It turns out that my solution is much more complex than the official solution. I am very sad.
+
+Let $xor_i=(w_{i+1}\oplus{w_{i+1}}\oplus\dots\oplus{w_n})$. For each query $j$, we want to find the first slime $i$ from the back of the array, such that $xor_i\oplus{x_j}<w_i$.
+
+Maintain a set of currently unanswered queries, and iterate over $i$ in reverse. Whenever we find for some query $j$ that $xor_i\oplus{x_j}<w_i$, then we answer that query and remove it from the set. Now the goal remains to efficiently solve the inequality $xor_i\oplus{x_j}<w_i$, as we clearly can't brute force over $j$.
+
+We can fix the most significant bit $k$ that $xor_i\oplus{x_j}$ and $w_i$ differ at. 
+ - This means that the suffix of bits $(k+1)\dots{log_2(w)}$ must be identical in both numbers.
+ - Next, in order to satisfy the inequality, the $k$ th bit of $xor_i\oplus{x_j}$ must be <b>unset</b>, and the $k$ th bit of $w_i$ must be <b>set</b>.
+ - Which means, that the inequality is satisfied regards of the states of all bits $0\dots{k-1}$ in $xor_i\oplus{x_j}$. 
+
+Consequently, we can deduce the range of possible numbers for $x_j$. We know the bits $[k+1,log_2(w)]$ because they must match between $xor_i\oplus{x_j}$ and $w_i$. We know bit $k$ because it must be unset in $xor_i\oplus{x_j}$. Let this bits $[k,log_2(w)]$ make up the number $s$. And, because the states of bits $[0,k-1]$ don't matter in $xor_i\oplus{x_j}$, then they also don't matter in $x_j$.
+
+So some $x_j$ satisfies the inequality if the suffix of bits $[k,log_2(w)]$ equals to $s$. The range of all numbers satisfying this is exactly $[s,2^k-1+s]$. So we just answer all queries in that range, with binary search.
+
+The time complexity is $O(NlogWlogQ+Q)$.
+
 ## E. Mycraft Sand Sort
 $c'=c$. Otherwise, the first column will be wrong.
 
