--- a/codeforces/contests/2001_to_2500/2072/2072.md
+++ b/codeforces/contests/2001_to_2500/2072/2072.md
@@ -1,4 +1,6 @@
-## G. 
+# CF Round 1006 (#2072)
+
+## G. I've Been Flipping Numbers for 300 Years and Calculated the Sum
 If $p\ge{N}$ then $rev(N,p)=N$.
 
 For all $2\le{p}\le{\sqrt{N}}$, brute force. 
