--- a/codeforces/contests/2001_to_2500/2055/2055.md
+++ b/codeforces/contests/2001_to_2500/2055/2055.md
@@ -9,12 +9,20 @@ If we make one unit of some material $a$, then we can't make a unit of another m
 Time complexity: $O(N)$.
 
 ## C. The Trail
-???
+For some fixed $x$, a greedy construction can be done starting from either endpoint of the trail. It's only left to pick such an $x$ that equates all row and column sums.
+
+Picking $x=0$ will work. Greedily filling in the unknown cells maintains that the sum of all rows, and columns (except $M$) have zero sum. So we have to verify that column $M$ has zero sum as well.
+
+The sum of all rows (so the entire grid) is zero, and the sum of all column except $M$ is zero, so column $M$ also has a zero sum.
+
+Time complexity: $O(NM)$.
 
 ## D. Scarecrow
 The first scarecrow moves to position $0$ to meet the crow. After this, each scarecrow will scare the crow for a specific amount of time. We will iterate over each scarecrow to find the maximum distance the crow can travel until it becomes scared by this scarecrow instead of the previous scarecrow.
 
-Let's assume we're calculating for scarecrow $i$. If the earliest time the previous scarecrow reached the crow was $t$, then the crow at that time currently be at position $x$. Let the position of scarecrow $i$ be $p$.
+the above statement is very misleading, but it is just to maximize the position of the crow at any given time. So it's actually to find the earliest time that each scarecrow gets to be the one scaring the crow (I think)
+
+Let's assume we're calculating for scarecrow $i$. If the earliest time the previous scarecrow reached the crow was $t$, then let the crow at that time currently be at position $x$. Let the position of scarecrow $i$ be $p$.
 
 Scarecrow $i$ can currently be in the range $[p-t,p+t]$. If $p\ge{x}\ge{p-t}$, then this scarecrow can have moved to position $x$ within those $t$ seconds, and now the crow should instantly teleport to position $x+k$. The time is still $t$.
 
@@ -26,3 +34,5 @@ Continue doing this until the crow reaches a position greater than or equal to $
 
 ## Comments:
 My first virtual ok. I solved A in B in 5 minutes and got stuck on C for an hour and a half, and gave up before trying D and solving it in literally 16 minutes. Definitely need to work on constructive problems.
+
+Problem C: hard
