--- a/atcoder/abc/250/abc250.md
+++ b/atcoder/abc/250/abc250.md
@@ -2,3 +2,6 @@
 
 ## E. Prefix Equality
 We only want to check if the sets are equal so duplicates won't be counted. So XOR hashing can be used: give each number a unique hash value, so the hash value of a set of numbers is the xor of the hashes of all numbers in the set. If we run into a dupliate value then ignore it. Checking if these xor hashes are equal corresponds to checking if the sets are equal. Time complexity: $O(NlogN)$ because we use a set.
+
+## F. One Fourth
+Fix the first point, then binary search on the best second point (to get the area as close as possible to one fourth the total area). Getting the area is done in $O(1)$ with shoelace theorem, so the total time complexity is $O(NlogN)$.
