--- a/codeforces/contests/2001_to_2500/2050/2050.md
+++ b/codeforces/contests/2001_to_2500/2050/2050.md
@@ -1,5 +1,8 @@
 # Codeforces Round 991 (#2050)
 
+## F. Maximum modulo equality
+If $x\equiv{y}\pmod{m}$, then $|x-y|\equiv{0}\pmod{m}$. So for the given range $[l,r]$, the answer is $gcd(|a_{l+1}-a_{l}|,|a_{l+2}-a_{l+1}|,\dots,|a_r-a_{r-1}|)$. I use square root decomposition to calculate gcd range queries, but a sparse table is arguably the best option. Mine runs in $O((N+Q)\sqrt{N}logA)$.
+
 ## G. Tree Destruction
 Root the tree at node $1$. There are two cases: the path extends from node $i$ into $i$'s subtree, or starts from a descendant of $i$, passes through $i$, and reaches another descendant of $i$. The second case is simply a combination of two paths of the first case, so we can just find the maximum amount of components formed by a path of the first type for each $i$. 
 
