--- a/olympiads/international/2011/2011.md
+++ b/olympiads/international/2011/2011.md
@@ -3,12 +3,21 @@
 https://oj.uz/problem/view/IOI11_garden
 
 ## 1. Tropical Garden
-
 Yeah yeah yeah this got put into Silver "<i>Intro</i> to Functional Graphs". I do think that it being rated Very Hard underrates it a bit considering the massive amount of time I spent on the implementation. Though, the thought process isn't terribly difficult. We should note that there are two states for each node: if you just came from the most beautiful path or not. Using this we can simulate the path of the group from any given node, from either state.
 
 Importantly, when at a given node and state there is only one road that you can take. So we can separately find the distances from all nodes to both states of node $P$ with dfs, and then check if the distances are equal to $K$ in $O(N)$ time per query.
 
 But this isn't the full answer. Specifically, if there is a cycle containing either state of node $P$, then there is the option to continuously traverse the cycle after reaching node $P$. More formally, if the length of the cycle is $L$ and the distance from node $P$ to some other node is $L_2$, then the path works if $(K-L_2)\%L = 0$. Two dfs's works to check if either state of $P$ is in a cycle (and retrieve the length of the cycle if it exists). The time complexity is $O(NQ)$.
+
+## 2. Race
+Consider the set of weighted distances of all nodes in the subtree of $i$ to $i$. We maintain a map for $i$ storing the minimum unweighted distance for each weighted distance. Small to large merging can be used to used to efficiently maintain these maps, and when merging we can obviously check to see, for each weighted distance, if a complementary weighted distance summing to $K$ exists.
+
+Time complexity: $O(Nlog^2N)$.
+
+## 3. Rice Hub
+If the range of rice fields we want to collect from $[l,r]$, then we can easily figure out the optimal location of a rice hub: the median. We can therefore calculate the minimum cost to collect from $[l,r]$.
+
+For the full solution, find the largest $r$ for each $l$ with two pointers. This runs in $O(N)$.
 
 # IOI 2011 Day 2
 
