--- a/codeforces/contests/2001_to_2500/2029/2029.md
+++ b/codeforces/contests/2001_to_2500/2029/2029.md
@@ -1,5 +1,12 @@
 # Refact.ai Match 1/Codeforces Round 985 (#2029)
 
+## D. Cool Graph
+If all edges are part of a cycle, then all operations preserve this invariant. So in this case, we can empty the graph by repeatedly select a vertex $a$ of degree $\ge{2}$, and picking two of its adjacent vertices $b$ and $c$, then performing the operation $(a,b,c)$. Each operation adds at most one edge while deleting $2$, so it works.
+
+We can generalize this to the full solution by performing the operation until impossible. If the graph is empty, we stop. Otherwise, we're left with a forest, and any two trees can be joined together by selecting two nodes $(a,b)$ connected by an edge in one tree, and a node $c$ in another tree. The operation $(a,b,c)$ joins those trees together.
+
+In total, this runs in $O((N+M)logN)$.
+
 ## E. Common Generator
 It feels like $2400$ idk why the rating is only $2100$. But, it is one of my favorite problems :thumbs_up:
 
