--- a/codeforces/contests/2001_to_2500/2043/2043.md
+++ b/codeforces/contests/2001_to_2500/2043/2043.md
@@ -1,5 +1,25 @@
 # Educational Codeforces Round 173
 
+## D. Problem about GCD
+Two numbers $a$ and $b$ have gcd $G$ if $a\equiv{b}\equiv{0}\pmod{G}$ and $a\over{G}$ is coprime to $b\over{G}$. So take $l'=\lceil{l\over{G}}\rceil$ and $r'=\lfloor{r\over{G}}\rfloor$, and the goal is to find two coprime numbers $a'$ and $b'$ in the range $[l',r']$; then return $a=a'\cdot{G}$ and $b=b'\cdot{G}$.
+
+We only have to consider up to the first prime $p_l$ that is $\ge{l'}$ and the first prime $p_r$ that is $\le{r'}$. Then just brute force over all pairs $(a',b')$ satisfying $l'\le{a'}\le{p_l}\le{p_r}\le{b'}\le{r'}$.
+
+Instead of finding the first prime, we can just fix a constant $K$ and check pairs $(a',b')$ satisfying $l'\le{a'}\le{l'+K}\le{r'-K}\le{b'}\le{r'}$. This would give a runtime of $O(K^2logR)$.
+
+I fixed $K=20$ because of the prime distribution theorem, which ACs but is probably not reliable.
+
+## E. Matrix Transformation
+We can decompose all row and column operations into ones each affecting the state of exactly one bit. The column operations turn some bit on for all numbers in that column, and the row operations turn some bit off for all numbers in that row.
+
+For each $a_{i,j}$, look at the corresponding $b_{i,j}$ and go through each bit $k$. If $k$ is on in both values, then if we perform the operation on row $i$ bit $k$, we must perform the operation on column $j$ bit $k$ after that, so draw a directed edge from the node corresponding to the row operation to the node corresponding to the column operation. Same thing goes if they are both turned off.
+
+If $k$ is turned on in $a_{i,j}$ but off in $b_{i,j}$, then we must perform the row operation corresponding to bit $k$ on row $i$, such that we can turn bit $k$ off in $a_{i,j}$. If we perform the operation for column $j$ bit $k$, then this must be done after that, so we draw a directed edge from the column node to the row node. We also mark the operation for row $i$ bit $k$ as "necessary", as it must be performed at some point in order to transform $a_{i,j}$ into $b_{i,j}$.
+
+And if $k$ is off in $a_{i,j}$ but on in $b_{i,j}$, similar logic follows.
+
+Take the subgraph induced by the set of all vertices reachable from an arbitrary necessary node. This graph gives the operations we must perform, so if a topological sort exists, then it's ok. To see if we can transform $a$ into $b$, we simply check if a topological sort exists on the union of all subgraphs. This is done with DFS, so the total time complexity is $O(NMlogA)$.
+
 ## F. Nim
 Because there's only $51$ possible $a$ values, each query can be independently solved. This is because for each $a$ value, we only care about the parity of the amount of occurences: if we add it an even number of times, then it contributes $0$ to the xor sum, and otherwise it contributes $a$.
 
