--- a/codeforces/contests/2001_to_2500/2039/2039.md
+++ b/codeforces/contests/2001_to_2500/2039/2039.md
@@ -1,7 +1,27 @@
 # CodeTON Round 9 (#2039)
 
+## A. Shohag Loves Mod
+$a_1\mod{1}=0$ always, so $a_2\mod{2}$ can only equal $1$. In general, $a_i\mod{i}=i-1$. A construction can be $a_i=2i-1$, which satisfies all properties. So $O(N)$.
+
 ## B. Shohag Loves Strings
 If there are two adjacent equal characters, then the amount of distinct substrings is $2$ so it's ok. If there's three adjacent distinct characters, then the amount in this substring is $6$ so it's also ok. Otherwise, the string must consist of two distinct alternating characters (or be of length $1$, in which case it's clear that it doesn't work). For any substring (length $n$) of these strings, the amount of unique substrings is $2n-1$ because there are $2$ unique substrings for each length up to $n$, except for length $n$ where there's only $1$ unique substring. Therefore, for these cases there is no solution. Checking these conditions takes $O(|S|)$.
+
+## C1. Shohag Loves XOR (Easy Version)
+The MSB of $y$ cannot be higher than the MSB of $x$; otherwise, the MSB of $y$ will be turned on in $x\oplus{y}$, and since the MSB of $y$ accounts for more than half the sum of $y$, then $x\oplus{y}$ cannot be a divisor of $y$ (or $x$ since $x<x\oplus{y}$). The amount of numbers with an MSB at most as high as the MSB of $x$ is loosely capped by $2x$. The exact value is $2^{\lfloor{log_2x}\rfloor+1}-1$, but whatever the case, it takes $O(\min(X,M))$ to brute force all values.
+
+## C2. Shohag Loves XOR (Hard Version)
+For two numbers $x,y$ satisfying $y\le{x}$, then $x\oplus{y}<2x$. So for $1\le{y}\le{x}$, $x\oplus{y}$ can only be a multiple of $y$. Brute force these.
+
+For $x<y\le{M}$, $x\oplus{y}$ can only be a multiple of $x$. It suffices to count the amount of multiples $y$ of $x$ such that $x<x\oplus{y}\le{M}$. I use a similar technique that I used in CF 2064D - Eating.
+
+Time complexity: $O(X+logM)$.
+
+## D. Shohag Loves GCD
+For a pair of indices $(i,j)$, if $i$ divides $j$, then $a_i$ must not divide $a_j$. It can be shown that these conditions are sufficient to cover the original constraints.
+
+Build a DAG where $i$ points to $j$ if $i$ divides $j$. We can see that for any path in this graph, all $a_k$ (such that $k$ is in the path) must be distinct, so it makes sense to assign values of $a$ in descending order, starting with the largest. This strategy can be generalized to the problem — iterate over $i$ in increasing order and assign $a_i$ to be the maximum possible value that is less than all $a_j$ such that $i\equiv{0}\pmod{j}$.
+
+Time complexity is $O(NlogN+MlogM)$.
 
 ## E. Shohag Loves Inversions
 Aside from the case $00\dots{01}$, then the number we add to the array (the number of inversions) will be the maximum of the new array. This means we can place it in whatever location we want, and therefore have freedom to specify how many new inversions we want.
