--- a/codeforces/contests/2001_to_2500/2064/2064.md
+++ b/codeforces/contests/2001_to_2500/2064/2064.md
@@ -1,5 +1,11 @@
 # Codeforces Round 1005 (#2069)
 
+## B. Variety is Discouraged
+The score of $a$ can never increase. It decreases by $1$ if an element is removed that is not distinct in $a$, and increases by $1$ if an element that is distinct in $a$ is removed. So to minimize the length of $a$, we should remove the longest subarray that consists entirely of elements distinct in $a$. Finding it takes $O(N)$.
+
+## C. Remove the Ends
+Go backwards. So, select a start element $i$ and repeatedly select an element $>0$ that is to the left of all selected elements so far, or an element $<0$ that is to the right of all selected elements so far. Optimally, this is the absolute value of the sum of all negative elements to the right of $i$, plus the absolute value of $i$, plus the sum of all positive elements to the left of $i$. So fix $i$ and use prefix and suffix sums to calculate the answer, all in $O(N)$.
+
 ## D. Eating
 It turns out that my solution is much more complex than the official solution. I am very sad.
 
@@ -32,3 +38,18 @@ Split $S_i$ into same-color components. Formally, two elements in $S_i$ are in t
 Store the components with DSU. Since we remove block $D$ after operation $i$, then $D-1$ and $D+1$ will be adjacent in $S_{i+1}$, so merge their components together.
 
 The runtime is generally $O(NlogN)$ from a binary search to find the value of $D$, but a double linked list can reduce it down to the DSU-dominated complexity of $O(N\alpha(N))$.
+
+## F. We Be Summing
+For a subarray: as $i$ increases, both $\min(b_1\dots{b_i})$ and $\max(b_{i+1}\dots{b_m})$ are non-increasing, so the pair of numbers that sum to $k$, $(x,k-x)$, is uniquely determined.
+
+With loss of generality assume all numbers are distinct. For each index $i$ calculate the range $mn_i$, which is from the first index $j$ to the left of $i$ such that $a_j<a_i$, to the first index $j$ to the right of $i$ such that $a_j<a_i$. Calculate $mx_i$ as well, which stores indices $j$ satisfying $a_j>a_i$.
+
+If $mn_i$ and $mx_j$ intersect (excluding endpoints), and $j>i$, then any subarray $[l,r]$ satisfying $l\le{i},r\ge{j},[l,r]\in[mn_i\cup mx_j]$ is epic.
+
+So calculate the answer by fixing $x$ and calculating the amount of epic subarrays from $mn_i$ and $mx_j$, where $a_i=x$ and $a_j=k-x$. That would take $O(N)$.
+
+A bit more care is required because $a$ can contain equivalent elements. To avoid overcounting, store $mn_i$ as from the first index $j<i$ such that $a_j<a_i$ to the first index $j>i$ such that $a_j\le{a_i}$. Store $mx_i$ similarly.
+
+Then when fixing $x$, sweep through all ranges $mn_i$ such that $a_i=x$ and compare each to all ranges $mx_j$ such that $a_j=k-x$. That would naively take $O(N^2)$, but with sweep line can be reduced to $O(N)$.
+
+Total time complexity, therefore, is also $O(N)$.
