--- a/codeforces/contests/2001_to_2500/2056/2056.md
+++ b/codeforces/contests/2001_to_2500/2056/2056.md
@@ -1,5 +1,17 @@
 # Codeforces Round 997
 
+## D. Unique Median
+Fix the median $x$. For each $x$, calculate the number of bad subarrays (of even length) without $x$ as the median, and subtract that from the answer. The answer needs to be initialized to $10*(\text{number of even length subarrays}) + (\text{number of odd length subarrays})$ to avoid overcounting.
+
+To calculate for some $x$: a subarray $[l,r]$ is bad if the amount of numbers $<x$ (defined $L(l,r)$), or the amount $>x$ (defined $G(l,r)$), is $\ge{{r-l+1}\over{2}}$. So the amount of bad subarrays for $x$ is equal to the amount of subarrays satisfying $L(l,r)\ge{{r-l+1}\over{2}}$, plus the amount satisfying $G(l,r)\ge{{r-l+1}\over{2}}$, minus the amount satisfying $L(l,r)=G(l,r)={{r-l+1}\over{2}}$.
+
+The second quantity is calculated in the same way as the first. The first is calculated as the following:
+ - Transform numbers $<x$ into $1$; numbers $\ge{x}$ into $0$. By taking the prefix sum of this array, we can easily get the value $L(l,r)$.
+ - Add $-1$ to every other index. Then take the prefix sum of this array and store it in the array $ps$. The segment $[l,r]$ corresponds to $ps_r-ps_{l-1}$ and stores $L(l,r)-{{r-l+1}\over{2}}$, and thus will have a non-negative sum if and only if $L(l,r)\ge{{r-l+1}\over{2}}$.
+ - That means, $ps_r\ge{ps_{l-1}}$, so fix $l$ and use a BIT or indexed set to calculate the amount of $r$.
+
+The third quantity can be calculated as a small extension of this. It runs in $O(NAlogN)$.
+
 ## E. Nested Segments
 Let's say $M=0$. Casework yields the following result: add the segment $[1,N]$, and then add two segments $[1,k]$ and $[k+1,N]$ (for any $k$), and recursively repeat the process for those two segments. That is, to split the current segment into two segments, add both segments to $T$, and then repeat for those two segments. This is the only method to add the maximum amount of segments. We can view this as a full binary tree with $N$ leaves, so the number of ways to add the maximum amount of segments is just $C_{N-1}$ which is the $(N-1)th$ Catalan number.
 
