--- a/codeforces/contests/2001_to_2500/2060/2060.md
+++ b/codeforces/contests/2001_to_2500/2060/2060.md
@@ -6,3 +6,16 @@ Most of the numbers in $a$ will be $1$. In fact, there are at most $\lfloor{log_
 So we fix the sum $x$ and also the amount of non-one numbers $L$. We want to calculate the number of arrays of length $N$ satisfying these constraints. First we must calculate the amount of arrays of length $L$ multiplying to $x$ (denote $c_L$), which can all be precalculated with a knapsack in $O(Klog^2K)$. Then the amount of arrays of length $N$ is $c_L(\sum_{i=L}^{N}{N\choose{i}})$. The binomial coefficient sum is simplified with hockey stick and thus we get $c_L{N+1\choose{L+1}}$. This binomial coefficient is further simplified to ${(N+1)!\over{(N-L)!}}/(L+1)!=(\prod_{i=N-L+1}^{N+1}i)/{(L+1)!}$ This can be computed by naively multiplying out the first term and then multiplying by the modular inverse of $(L+1)!$.
 
 The answer is the sum of that expression across all $x$ and $L$. Thus, we can get the answer in $O(Klog^2K)$.
+
+## G. Bugged Sort
+Define a horizontal swap of $i$ and $j$: swap $a_i$ with $a_j$ and $b_i$ with $b_j$. Define a vertical swap of $i$ and $j$: swap $(a_i,b_i)$ and $(a_j,b_j)$.
+
+Observation 1: Under the constraints, we can perform any horizontal swap using only Alice's swap function. To swap $i$ and $j$, perform the three swaps $(i,j),(i,k),(j,k)$ where $k\ne{i,j}$. Since Alice's swap is a horizontal plus a vertical swap, this means that we can also perform any vertical swap by only using the function.
+
+Inverting an index $i$ refers to swapping $a_i$ and $b_i$. Since two inversions make a vertical swap, the answer is yes if and only if we can invert an even number of indices, then sort both arrays simultaneously by rearranging the indices via horizontal swaps.
+
+Observation 2: Let $a'$ and $b'$ be the sorted versions of $a$ and $b$. Let the order of the indices that make up $a'$ and $b'$ be $s_1,s_2,\dots\,s_N$. This means, $(a'_i,b'_i)$ either equals $(a_{s_i},b_{s_i})$ or $(b_{s_i},a_{s_i})$.
+
+The permutation $s_1\dots{s_N}$ holds for any valid $a'$ and $b'$, as it must be that the permutation is sorted by $\min(a_i,b_i)$. So we have an explicit order of indices, and now need to figure out if an even number of inversions can be made as to sort both $a$ and $b$. Do this with easy dp.
+
+So $O(N)$.
