--- a/codeforces/contests/1501_to_2000/1775/1775.md
+++ b/codeforces/contests/1501_to_2000/1775/1775.md
@@ -5,3 +5,21 @@ Build a bipartite graph between spiders and primes, and BFS from $s$ to find the
 
 ## E. The Human Equation
 The effect on the prefix sum array is the same as increasing all the values contained in a set of disjoint intervals by $1$ or $-1$. The goal would be to get all values in the prefix sum array to $0$, so it's clear that the answer is the maximum of the prefix sum array plus the absolute value of the minimum. This simplifies to max minus min. We can calculate the prefix sum array and answer in $O(N)$.
+
+## F. Laboratory on Pluto
+To find the minimum perimeter: We start with a square of size $n=\lfloor\sqrt{N}\rfloor$ as this is the only way to achieve the minimum perimeter with that amount of blocks, and then constantly add the block of least cost until we have area $N$. This means adding blocks along one side until reaching area $n(n+1)$, and, if there are still blocks remaining, then add them along the longer side of length $n+1$.
+
+To answer $u=1$: Follow the same construction as above.
+
+To answer $u=2$: Consider the strictest bounding rectangle for some shape with area $N$ and minimum perimeter $p_N$. The bounding rectangle must have the same perimeter as the shape, with disjoint "staircases" in the four corners. So to answer a query, simply iterate over all possible rectangles (let size be $w\cdot{h}$) with perimeter $p_N$ and area $\ge{N}$ and add up the amount of ways to draw four staircases with total area $wh-N$ in the corners of the rectangle.
+
+Because there are most $O(\sqrt{N})$ rectangles for each query, the time complexity of that part is $O(T\sqrt{N})$ provided we can query the amount of ways to configure staircases in $O(1)$.
+
+It turns out, that any four staircases with total area $wh-N$, when placed in the four corners of the rectangle, must be disjoint from each other. We assume that $2wh=p_N$, so if any two staircases touch, then the perimeter of the resulting shape is $<2wh$, and thus the assumption holds false as it implies that $p_N$ is not the smallest perimeter for area $N$. So we can reduce the problem to finding one staircase first.
+
+To find the answer for one staircase: the amount of ways for area $N$ is equal to $p(N)$, which denotes the $N$ th partition number. Because the largest possible value of $wh-N=\lceil{\sqrt{N}}\rceil^2-N=O(\sqrt{N})$, we need to maintain a dp table of length $O(\sqrt{N})$ and using the recurrence relationship for the partition numbers gives an $O(N)$ dp.
+
+To find the answer for four staircases:
+It's simply the fourth convolution of the dp array, and that takes $O(N)$ time overall.
+
+So the problem is solved in $O(N+T\sqrt{N})$.
