--- a/usaco/contests/gold/2025/feb/2025_feb.md
+++ b/usaco/contests/gold/2025/feb/2025_feb.md
@@ -27,6 +27,11 @@ This gives us the largest prefix, and we can easily find the corresponding suffi
 
 The time complexity is $O(MlogN+Q(log^2M+logN))$.
 
+## 3. Friendship Editing
+Transform the constraint. If neither $(a,c)$ nor $(b,c)$ exists, then $(a,c)$ cannot exist.
+
+So it makes sense to look at the complement of the graph, and we can see that all connected components must be cliques. Bitmask dp on cliques solves the problem in $O(3^N)$.
+
 ### Comments:
 I might pass. I fully solved 1 and 2, and did a yolo brute force algorithm for 3, to get a score of 733. Even with two hours to spend on 3 I couldn't solve it.
 
@@ -37,3 +42,5 @@ I might pass. I fully solved 1 and 2, and did a yolo brute force algorithm for 3
 3 seems impossible. I made zero observations even though it's super clear that it's a bitmask dp/meet in the middle problem, and I resorted to brute forcing the adjacency list of two fixed nodes and then resolving contradictions in the graph.
 
 codeforces ratings: 1 is probably 2000, 2 seems like 2200/2300, and 3 seems like 2500+.
+
+Update 3 is like 2000
