--- a/usaco/contests/gold/2025/jan/2025_jan.md
+++ b/usaco/contests/gold/2025/jan/2025_jan.md
@@ -1,5 +1,12 @@
 # USACO Gold 2025 Jan
 
+## 1. Median Heap
+For $O(NQ)$: consider a dp where each node has three states: $dp[i][0]$, if the median approximation for the subtree of $i$ is less than the target median $m$, $dp[i][1]$, if the approximation is equal to $m$, and $dp[i][2]$ if the approximation is greater than $m$.
+
+This can be computed in $O(N)$ per query. Define the dp base cases $b[i]$ for node $i$, $b[i][0]=0$ if $a_i<m$ and $c_i$ otherwise; $b[i][1]=0$ if $a_i=m$ and $c_i$ otherwise; $b[i][2]=0$ if $a_i>m$ and $c_i$ otherwise. Then we evaluate all $3^3$ combinations of $b[i]$, $dp[2i]$, and $dp[2i+1]$ to get $dp[i]$.
+
+To speedup the solution: since $b_i$ (and thus $dp_i$) is computed by looking at the value of $a_i$ relative to $m$, then if queries are processed offline in decreasing value of $m$, then $b_i$ changes at most twice — when $m=a_i$ and when $m<a_i$. Updating $b_i$ results in an update of the dp values of $i$ and all its ancestors, at most $\lceil{log_2N}\rceil$ nodes. So across all queries the total time complexity is $O(NlogN+QlogQ)$.
+
 ## 2. Reachable Pairs
 Only problem I solved in contest, lol. 
 
