--- a/codeforces/contests/2001_to_2500/2109/2109.md
+++ b/codeforces/contests/2001_to_2500/2109/2109.md
@@ -1,5 +1,16 @@
 # CF Round 1025 (#2109)
 
+## A. It's Time to Duel
+Between every pair of consecutive elements, there must exist at least one $1$. It can be seen that this constraint is sufficient provided the array contains at least one occurence of $0$.
+
+Time complexity: $O(N)$.
+
+## B. Slice to Survive
+Fix the first cut which is either the row $a+1$ or the row $a-1$, or the column $b-1$ or the column $b+1$. Then the problem is reduced to Fouad (player 2) going first on some grid of size $c\cdot{d}$. Optimally, he chooses the center of the grid every time to minimize loss from Mouf's cuts, so the amount of turns is expressed by the amount of times the following function is executed:
+ - If $c\ne{1}$, set $c:=\lceil{c\over{2}}\rceil$. Else, if $d\ne{1}$, set $d:=\lceil{d\over{2}}\rceil$.
+
+Time complexity: $O(logN+logM)$.
+
 ## C1. Hacking Numbers (Easy Version)
 Digit sum reduces by the most. So taking the digit sum twice reduces $x$ to the range $[1,16]$. Subtract $8$, $4$, $2$, $1$ in succession so that it's guaranteed that $x=1$. Then, multiply by $N$. It takes $7$ operations in total and $O(1)$ per test case.
 
@@ -7,3 +18,29 @@ Digit sum reduces by the most. So taking the digit sum twice reduces $x$ to the 
 Multiply by $9$. Since the digit sum will be divisible by $9$ if $x$ is divisible by $9$, then applying the digit sum twice reduces $x$ to $9$. Then add $N-9$.
 
 $4$ queries, $O(1)$ per test case.
+
+## D. D/D/D
+Calculate the minimum length of an odd length and even length path to every node. Also calculate the maximum sums of even and odd parity in the multiset.
+
+Simply, if the maximum even sum is greater than or equal to the minimum even length path, then it works because one reaching the node, we can alternate between it and an arbitrary adjacent node. Same goes: it works if the maximum odd sum is greater than or equal to the minimum odd length path.
+
+The first part is done with BFS and the second with greedy, both in $O(N)$.
+
+## E. Binary String Wowee
+The current state of $s_i$ is determined only by the amount of operations on the suffix $s_i\dots{s_N}$. So run a dp, $dp[i][k]$ equals the amount of ways to pick out $k$ operations on the suffix $s_i\dots{s_N}$.
+
+We transition from $dp[i][k]$ to $dp[i-1][k+c]$. To do this, we need to perform $c$ operations on index $i-1$. It must be that $s_{i-1}=0$ when these operations are performed. So if in the initial string, $s_{i-1}=0$, then all operations performed on $i-1$ must be at even indices (0-indexed) in the $k$ operations, and otherwise all at odd indices.
+
+So the following transitions:
+ - If $s_{i-1}=0$, then $dp[i-1][k+c]\mathrel{{+}{=}}dp[i][k]\cdot{{\lceil{{k+c}\over{2}}\rceil}\choose{c}}$.
+ - Else, $dp[i-1][k+c]\mathrel{{+}{=}}dp[i][k]\cdot{{\lfloor{{k+c}\over{2}}\rfloor}\choose{c}}$.
+
+Return $dp[0][K]$ at the end. The base case is $dp[N][0]=1$, and it runs in $O(NK^2)$.
+
+
+### Comments:
+C1 first which was easy. C2 is not intuitive but a good problem.
+
+E next, which is very easy for D2E. D next, which I solved in maybe 15-20 minutes so it was ok.
+
+Then A, an easy problem, and B, which I had trouble with (a lot of it because I misread the problem and got very confused with the samples & also had to debug somehow). So maybe like 7-10 minutes if you ignore the misreading.
