--- a/codeforces/contests/1501_to_2000/1746/1746.md
+++ b/codeforces/contests/1501_to_2000/1746/1746.md
@@ -9,4 +9,4 @@ Checking if the sum is divisible by $k$ sometimes produces a false positive, and
 
 Random hashes can be generated for each value in the array and then it remains to check whether the sum of hashes is divisible by $k$. It has a $1\over{k}$ probability of producing a false positive, which is maximized as $1\over{2}$ when $k=2$. So all that is necessary is to run around $25$ trials, and the probability of failure is now $1\over{2^{25}}$.
 
-If there are $T$ trials, then the time complexity is $O((N+Q)logNlogT)$.
+If there are $T$ trials, then the time complexity is $O(T(N+Q)logN)$.
