--- a/codeforces/contests/2001_to_2500/2110/2110.md
+++ b/codeforces/contests/2001_to_2500/2110/2110.md
@@ -9,4 +9,4 @@ Assume WLOG $x<y$. If $x>{y\over{2}}$ then $f(x,y)=y$; otherwise, $x+(y\mod{x})$
 
 That last part takes $O(N)$ brute force, but runs at most $O(logA)$ times, so the time complexity of this solution is $O(NlogA)$.
 
-More: it's also worth it to note that $f(x,y)<2\min(x,y)$. So after removing duplicates from $a$: the brute force can be cut down on. Let the second maximum be $M_{i,2}$. Then it's only worth to brute force $j$ satisfying $j<i$ and $a_j<{{M_{i,2}}\over{2}}\le{M_{i,2}}$ which is at most $\min(N,{M_i\over{4}})$ values. This means the total number of operations is $O(\sum_{i=0}^{log_2{10^9}}{min(N,{2^i\over{4}})})\approx O(10N+5.2\cdot{10^5})$ operations when $N=10^6$. In practice, this is slower because it requires an $O(NlogN)$ sort and set but code is there too.
+More: it's also worth it to note that $f(x,y)<2\min(x,y)$. So after removing duplicates from $a$: the brute force can be cut down on. Let the second maximum be $M_{i,2}$. Then it's only worth to brute force $j$ satisfying $j<i$ and ${{M_{i,2}}\over{2}}<a_j\le{M_{i,2}}$ which is at most $\min(N,{M_i\over{4}})$ values. This means the total number of operations is $O(\sum_{i=0}^{log_2{10^9}}{min(N,{2^i\over{4}})})\approx O(10N+5.2\cdot{10^5})$ operations when $N=10^6$. In practice, this is slower because it requires an $O(NlogN)$ sort and set but code is there too.
